--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "[5 rows x 47 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -263,26 +263,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ID                             0\n",
+       "Severity                       0\n",
+       "Start_Time                     0\n",
+       "End_Time                       0\n",
+       "Start_Lat                      0\n",
+       "Start_Lng                      0\n",
+       "End_Lat                   282821\n",
+       "End_Lng                   282821\n",
+       "Distance(mi)                   0\n",
+       "Description                    0\n",
+       "Number                   1891672\n",
+       "Street                         0\n",
+       "Side                           0\n",
+       "City                         108\n",
+       "County                         0\n",
+       "State                          0\n",
+       "Zipcode                     1114\n",
+       "Country                        0\n",
+       "Timezone                    3430\n",
+       "Airport_Code                6608\n",
+       "Weather_Timestamp          46917\n",
+       "Temperature(F)             67224\n",
+       "Wind_Chill(F)            1183859\n",
+       "Humidity(%)                71270\n",
+       "Pressure(in)               56908\n",
+       "Visibility(mi)             72078\n",
+       "Wind_Direction             63474\n",
+       "Wind_Speed(mph)           307163\n",
+       "Precipitation(in)        1301326\n",
+       "Weather_Condition          71851\n",
+       "Amenity                        0\n",
+       "Bump                           0\n",
+       "Crossing                       0\n",
+       "Give_Way                       0\n",
+       "Junction                       0\n",
+       "No_Exit                        0\n",
+       "Railway                        0\n",
+       "Roundabout                     0\n",
+       "Station                        0\n",
+       "Stop                           0\n",
+       "Traffic_Calming                0\n",
+       "Traffic_Signal                 0\n",
+       "Turning_Loop                   0\n",
+       "Sunrise_Sunset               110\n",
+       "Civil_Twilight               110\n",
+       "Nautical_Twilight            110\n",
+       "Astronomical_Twilight        110\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Check for null values\n",
+    "pd.isnull(df).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Drop unnecessary columns\n",
-    "to_drop = ['Description', 'Number', 'Street', 'Side', 'Country']\n",
+    "to_drop = ['End_Lat', 'End_Lng', 'Description', 'Number', 'Side', 'City', 'Zipcode', 'Country', 'Timezone', \n",
+    "           'Airport_Code', 'Weather_Timestamp']\n",
     "\n",
     "df.drop(columns=to_drop, inplace=True, axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2906610, 42)\n"
+      "(2906610, 36)\n"
      ]
     }
    ],
@@ -292,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +370,7 @@
        "True"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +401,7 @@
        "array([2, 3, 4, 1], dtype=int64)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,49 +412,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "11789"
+       "1729"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Number of unique cities\n",
-    "df['City'].nunique()"
+    "df['County'].nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "372018"
+       "49"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#Number of unique zip codes\n",
-    "df['Zipcode'].nunique()"
+    "df['State'].nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
