--- a/Data Cleaning.ipynb
+++ b/Data Cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "[5 rows x 47 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Drop unnecessary columns\n",
+    "to_drop = ['End_Lat', 'End_Lng', 'Description', 'Number', 'Side', 'City', 'Zipcode', 'Country', 'Timezone', \n",
+    "           'Airport_Code', 'Weather_Timestamp']\n",
+    "\n",
+    "df.drop(columns=to_drop, inplace=True, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2906610, 36)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -275,21 +305,10 @@
        "End_Time                       0\n",
        "Start_Lat                      0\n",
        "Start_Lng                      0\n",
-       "End_Lat                   282821\n",
-       "End_Lng                   282821\n",
        "Distance(mi)                   0\n",
-       "Description                    0\n",
-       "Number                   1891672\n",
        "Street                         0\n",
-       "Side                           0\n",
-       "City                         108\n",
        "County                         0\n",
        "State                          0\n",
-       "Zipcode                     1114\n",
-       "Country                        0\n",
-       "Timezone                    3430\n",
-       "Airport_Code                6608\n",
-       "Weather_Timestamp          46917\n",
        "Temperature(F)             67224\n",
        "Wind_Chill(F)            1183859\n",
        "Humidity(%)                71270\n",
@@ -319,7 +338,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,37 +350,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Drop unnecessary columns\n",
-    "to_drop = ['End_Lat', 'End_Lng', 'Description', 'Number', 'Side', 'City', 'Zipcode', 'Country', 'Timezone', \n",
-    "           'Airport_Code', 'Weather_Timestamp']\n",
-    "\n",
-    "df.drop(columns=to_drop, inplace=True, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2906610, 36)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0    76\n",
+       "1    76\n",
+       "2    51\n",
+       "3    53\n",
+       "4    88\n",
+       "5    75\n",
+       "6    28\n",
+       "7    55\n",
+       "8    92\n",
+       "9    57\n",
+       "Name: Wind_Chill(F), dtype: Int64"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(df.shape)"
+    "#Calculate missing wind chill values\n",
+    "wchill = 35.74 + (0.6215*df['Temperature(F)']) - (35.75*((df['Wind_Speed(mph)'])**0.16)) + \\\n",
+    "        (0.4275*df['Temperature(F)']*((df['Wind_Speed(mph)'])**0.16))\n",
+    "\n",
+    "df[\"Wind_Chill(F)\"] = df[\"Wind_Chill(F)\"].fillna(value=wchill)\n",
+    "df[\"Wind_Chill(F)\"] = df[\"Wind_Chill(F)\"].round(0).astype('Int64', errors='ignore')\n",
+    "\n",
+    "df[\"Wind_Chill(F)\"].head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Temperture(F)\"] = df[\"Temperature(F)\"].fillna('Unknown')\n",
+    "df[\"Humidity(%)\"] = df[\"Humidity(%)\"].fillna('Unknown')\n",
+    "df[\"Pressure(in)\"] = df[\"Pressure(in)\"].fillna('Unknown')\n",
+    "df[\"Visibility(mi)\"] = df[\"Visibility(mi)\"].fillna('Unknown')\n",
+    "df[\"Wind_Direction\"] = df[\"Wind_Direction\"].fillna('Unknown')\n",
+    "df[\"Wind_Speed(mph)\"] = df[\"Wind_Speed(mph)\"].fillna('Unknown')\n",
+    "df[\"Precipitation(in)\"] = df[\"Precipitation(in)\"].fillna('Unknown')\n",
+    "df[\"Weather_Condition\"] = df[\"Weather_Condition\"].fillna('Unknown')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +412,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +443,7 @@
        "array([2, 3, 4, 1], dtype=int64)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +463,7 @@
        "1729"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +484,7 @@
        "49"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
